Re-organize user_setup files

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ;**************************************************************
 [platformio]
 extra_configs =
-    lcd_config.ini
+    user_setups/lcd_config.ini
     ; --  Put active [env] files in this dir to be included in the build menu
     user_setups/active/*.ini
     ; --  Add customizations to this file only:
