--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ build_output/firmware/*.bin
 ## Test result files
 *.html
 *.xml
+*.bin
 
 ## Visual Studio Code specific ######
 .vscode
@@ -22,6 +23,3 @@ build_output/firmware/*.bin
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 *.bak
-
-build_output/firmware/d1mini-lolintft24_v0.2.1111.bin
-build_output/firmware/d1mini32-lolintft24_v0.2.1111.bin
