--- a/platformio.ini
+++ b/platformio.ini
@@ -57,9 +57,9 @@ lib_ignore =
 
 build_flags =
     ;-Os          ; Code Size Optimization
-    -Og          ; Code Debug Optimization
+    -Og           ; Code Debug Optimization
     ;-w           ; Suppress warnings
-    -D CORE_DEBUG_LEVEL=1           ; Errors
+    -D CORE_DEBUG_LEVEL=1           ; 0=Silent, 1=Errors
     -I include   ; include lv_conf.h and hasp_conf.h
     ; -- littlevgl build options ------------------------------
     -D LV_CONF_INCLUDE_SIMPLE
