--- a/user_setups/esp8266/d1-mini-esp8266_ili9341.ini
+++ b/user_setups/esp8266/d1-mini-esp8266_ili9341.ini
@@ -10,6 +10,7 @@ platform = espressif8266@^2.6.2
 board = d1_mini
 ;upload_port = COM7      ; To change the port, use platform_override.ini
 ;monitor_port = COM7     ; To change the port, use platform_override.ini
+monitor_filters = esp8266_exception_decoder
 board_build.f_flash = 40000000L
 board_build.flash_mode = dout
 board_build.ldscript = eagle.flash.4m2m.ld  ; 2Mb Spiffs
