Prepare for LittleFS

--- a/platformio.ini
+++ b/platformio.ini
@@ -95,6 +95,7 @@ esp8266_flags=
     -D HASP_USE_SYSLOG=1
     -D HASP_USE_TELNET=1
     -D HASP_USE_SPIFFS=1
+    -D HASP_USE_LITTLEFS=0
     -D HASP_USE_EEPROM=1
     -D HASP_USE_GPIO=1
     -D HASP_USE_ETHERNET=0
@@ -110,6 +111,7 @@ esp32_flags=
     -D HASP_USE_SYSLOG=1
     -D HASP_USE_TELNET=1
     -D HASP_USE_SPIFFS=1
+    -D HASP_USE_LITTLEFS=0
     -D HASP_USE_EEPROM=1
     -D HASP_USE_GPIO=1
 
