--- a/user_setups/esp32/d1-mini-esp32_ili9341.ini
+++ b/user_setups/esp32/d1-mini-esp32_ili9341.ini
@@ -23,6 +23,11 @@ build_flags =
     -D TFT_RST=-1  ; RST
     -D TFT_BCKL=-1 ; None, configurable via web UI (e.g. 21)
     -D TOUCH_CS=17 ; (can also be 22 or 16)
+	-D PIOENV=${PIOENV} 
+	-D CONFIG_LITTLEFS_FOR_IDF_3_2
+
+lib_deps =
+    LittleFS_esp32
 
 lib_ignore =
     GxTFT
