Add PSram flags

--- a/user_setups/esp32/lolin-d32-pro_ili9341.ini
+++ b/user_setups/esp32/lolin-d32-pro_ili9341.ini
@@ -15,6 +15,8 @@ board = lolin_d32_pro
 board_build.partitions = user_setups/esp32_partition_app1280k_spiffs1472k.csv
 build_flags =
     ${flags.esp32_flags}
+    -DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
 ; -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ${pins.vspi32}
