Update TFT_eSPI library

--- a/platformio.ini
+++ b/platformio.ini
@@ -38,14 +38,14 @@ monitor_speed = 115200
 ; -- Shared library dependencies in all environments
 lib_deps =
     ;lvgl@7.0.0          ; Not in library yet 
-    https://github.com/netwizeBE/TFT_eSPI.git
-    ;TFT_eSPI@^2.2.2     ; Tft SPI drivers
+    ;https://github.com/netwizeBE/TFT_eSPI.git
+    bodmer/TFT_eSPI @ ^2.3.4 ; Tft SPI drivers
     ;TFT_eSPI@^1.4.20    ; Tft SPI drivers
-    PubSubClient@^2.8.0  ; MQTT client
-    ArduinoJson@^6.17.1  ; JSON Parser
-    StreamUtils@^1.5.0
+    PubSubClient @ ^2.8.0  ; MQTT client
+    ArduinoJson @ ^6.17.1  ; JSON Parser
+    StreamUtils @ ^1.5.0
     ;Syslog@^2.0.0       ; Obsoleted
-    AceButton@^1.7.0
+    AceButton @ ^1.7.0
     ;AsyncTCP
     ;https://github.com/me-no-dev/ESPAsyncWebServer/archive/master.zip
     ;https://github.com/me-no-dev/ESPAsyncTCP/archive/master.zip
@@ -75,7 +75,7 @@ build_flags =
     ${override.build_flags}
     -D HASP_VERSION_MAJOR=0
     -D HASP_VERSION_MINOR=2
-    -D HASP_VERSION_REVISION=1114
+    -D HASP_VERSION_REVISION=1115
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<stm32f4/>
 
