--- a/user_setups/stm32f4xx/stm32f407-black_ili9341_wifi.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341_wifi.ini
@@ -21,6 +21,7 @@ build_flags =
     ;-D TFT_MOSI=PB5 ;Default
     ;-D TFT_SCLK=PB3 ;Default
     -D USE_DMA_TO_TFT=1
+;#define TFT_SPI_PORT 1 // SPI port 1 maximum clock rate is 55MHz
     -D TFT_CS=PE13 ;D8
     -D TFT_DC=PE14  ;D3
     -D TFT_BCKL=PA15 ;None, configurable via web UI (e.g. 2 for D4)
