--- a/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
@@ -36,6 +36,7 @@ build_flags =
     -D TOUCH_CS=PA6 ;NC
     -D TFT_RST=-1  ;D4
     -D STM32
+;#define TFT_SPI_PORT 1 // SPI port 1 maximum clock rate is 55MHz
     -D TFT_SPI3
     -D USE_DMA_TO_TFT
     -D HASP_USE_WIFI=0
