--- a/user_setups/esp32/d1-mini-esp32_ili9341.ini
+++ b/user_setups/esp32/d1-mini-esp32_ili9341.ini
@@ -15,6 +15,7 @@ board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 
 build_flags =
     ${flags.esp32_flags}
+	-D PIOENV=${PIOENV} 
 ; -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ${pins.vspi32}
@@ -23,10 +24,13 @@ build_flags =
     -D TFT_RST=-1  ; RST
     -D TFT_BCKL=-1 ; None, configurable via web UI (e.g. 21)
     -D TOUCH_CS=17 ; (can also be 22 or 16)
-	-D PIOENV=${PIOENV} 
+    ;-D USE_DMA_TO_TFT
+    ;-D ESP32_DMA  ; Make touch reads wait for DMA
+; -- LittleFS build options ------------------------
 	-D CONFIG_LITTLEFS_FOR_IDF_3_2
 
 lib_deps =
+    ${env.lib_deps}
     LittleFS_esp32
 
 lib_ignore =
