Make LV_MEM_SIZE configurable

--- a/platformio.ini
+++ b/platformio.ini
@@ -85,8 +85,10 @@ extra_scripts = move-rename-firmware.py ; pre:extra_script.py
 [flags]
 esp8266_flags=
     ${env.build_flags}
-    -D HTTP_UPLOAD_BUFLEN=640      ; lower http upload buffer
-    -D MQTT_MAX_PACKET_SIZE=1024   ; longer PubSubClient messages
+    -D HTTP_UPLOAD_BUFLEN=640       ; lower http upload buffer
+    -D MQTT_MAX_PACKET_SIZE=1024    ; longer PubSubClient messages
+; -- lvgl build options -----------------------------
+    -D LV_MEM_SIZE=(10*1024U)       ; 10kB lvgl memory
 ; -- hasp-lvgl build options ------------------------
     -D HASP_USE_WIFI=1
     -D HASP_USE_MQTT=1
@@ -104,6 +106,8 @@ esp32_flags=
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
+; -- lvgl build options -----------------------------
+    -D LV_MEM_SIZE=(20*1024U)       ; 20kB lvgl memory
 ; -- hasp-lvgl build options ------------------------
     -D HASP_USE_MQTT=1
     -D HASP_USE_HTTP=1
