Move scripts to tools folder

--- a/platformio.ini
+++ b/platformio.ini
@@ -75,11 +75,11 @@ build_flags =
     ${override.build_flags}
     -D HASP_VERSION_MAJOR=0
     -D HASP_VERSION_MINOR=2
-    -D HASP_VERSION_REVISION=1115
+    -D HASP_VERSION_REVISION=1116
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<stm32f4/>
 
-extra_scripts = move-rename-firmware.py ; pre:extra_script.py
+extra_scripts = tools/move-rename-firmware.py    ; tools/pre:extra_script.py
 
 ; -- Platform specific build flags
 [flags]
@@ -121,11 +121,11 @@ esp32_flags=
 
 stm32_flags=
     ${env.build_flags}
+    -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
     -D IRAM_ATTR=                   ; No IRAM_ATTR available on STM32
     -D ICACHE_RAM_ATTR=
     -D STM32
     -D STREAMUTILS_USE_EEPROM_UPDATE=1  ; update cell only when changed
-    -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
 
 ; -- By default there are no ${override.build_flags} set
 ; -- to use it, copy the platformio_override.ini file from the template
