Reorganize ini sections

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,14 +20,6 @@ default_envs =
     ; You can also create new environments in in platformio_override.ini
     ${override.extra_default_envs}
 
-; -- Location of the configuration files
-;include_dir =
-    ;include
-    ;lv_lib_zifont
-    ;lvgl
-    ;png_decoder
-
-
 ;***************************************************
 ;          Common environment settings
 ;***************************************************
@@ -37,23 +29,23 @@ upload_speed = 921600
 monitor_speed = 115200
 ; -- Shared library dependencies in all environments
 lib_deps =
-    ;lvgl@7.0.0          ; Not in library yet 
-    ;https://github.com/netwizeBE/TFT_eSPI.git
+    ;lvgl@7.7.2              ; Not in library yet 
     bodmer/TFT_eSPI @ ^2.3.4 ; Tft SPI drivers
-    ;TFT_eSPI@^1.4.20    ; Tft SPI drivers
-    PubSubClient @ ^2.8.0  ; MQTT client
-    ArduinoJson @ ^6.17.1  ; JSON Parser
-    StreamUtils @ ^1.5.0
-    ;Syslog@^2.0.0       ; Obsoleted
+    ;TFT_eSPI@^1.4.20        ; Tft SPI drivers
+    PubSubClient @ ^2.8.0    ; MQTT client
+    ArduinoJson @ ^6.17.2    ; Json(l) parser
+    StreamUtils @ ^1.5.0     ; for EEPromStream
     AceButton @ ^1.7.0
+    https://github.com/andrethomas/TasmotaSlave.git
+    ; ------ Uned / Test libraries
+    ;https://github.com/netwizeBE/TFT_eSPI.git
+    ;Syslog@^2.0.0       ; Obsoleted
     ;AsyncTCP
     ;https://github.com/me-no-dev/ESPAsyncWebServer/archive/master.zip
     ;https://github.com/me-no-dev/ESPAsyncTCP/archive/master.zip
-    https://github.com/andrethomas/TasmotaSlave.git
 
 lib_ignore = 
     https://github.com/littlevgl/lvgl.git
-
 
 build_flags =
     ;-Os          ; Code Size Optimization
@@ -75,7 +67,7 @@ build_flags =
     ${override.build_flags}
     -D HASP_VERSION_MAJOR=0
     -D HASP_VERSION_MINOR=2
-    -D HASP_VERSION_REVISION=1116
+    -D HASP_VERSION_REVISION=1118
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<stm32f4/>
 
@@ -146,17 +138,6 @@ hspi32 =
     -D TFT_MISO=12
     -D TFT_MOSI=13
     -D TFT_SCLK=14
-
-; Rotation params:
-; 0 - 0 deg
-; 1 - 90 deg anti-clockwise (from 0 deg)
-; 2 - 180 deg anti-clockwise
-; 3 - 270 deg anti-clockwise
-; 4 - mirror content, and rotate 180 deg anti-clockwise
-; 5 - mirror content, and rotate 270 deg anti-clockwise
-; 6 - mirror content, and rotate 0 deg anti-clockwise
-; 7 - mirror content, and rotate 90 deg anti-clockwise
-
 
 
 ;***************************************************
