--- a/user_setups/lcd_config.ini
+++ b/user_setups/lcd_config.ini
@@ -4,11 +4,21 @@ tft_rotation = 0      ; default rotation
 tft_width = 240       ; default width
 tft_height = 320      ; default height
 
+; TFT_ROTATION values:
+; 0 - 0 deg
+; 1 - 90 deg anti-clockwise (from 0 deg)
+; 2 - 180 deg anti-clockwise
+; 3 - 270 deg anti-clockwise
+; 4 - mirror content, and rotate 180 deg anti-clockwise
+; 5 - mirror content, and rotate 270 deg anti-clockwise
+; 6 - mirror content, and rotate 0 deg anti-clockwise
+; 7 - mirror content, and rotate 90 deg anti-clockwise
+
 lolin24 =
     -D ILI9341_DRIVER=1
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=320
-    -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
+    -D TFT_ROTATION=0 ; see TFT_ROTATION values
     -D SPI_FREQUENCY=40000000
     -D SPI_TOUCH_FREQUENCY=2500000
     -D SPI_READ_FREQUENCY=20000000
@@ -21,7 +31,7 @@ raspberrypi =
     -D ST7796_DRIVER=1
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=480
-    -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
+    -D TFT_ROTATION=0 ; see TFT_ROTATION values
     -D SPI_FREQUENCY=80000000
     -D SPI_TOUCH_FREQUENCY=2500000
     -D USER_SETUP_LOADED=1
@@ -33,7 +43,7 @@ mrb3511 =
     -D ILI9488_DRIVER=1
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=480
-    -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
+    -D TFT_ROTATION=0 ; see TFT_ROTATION values
     -D USER_SETUP_LOADED=1
     -D TOUCH_DRIVER=1 ; GT911 Capacitive touch panel driver
     -D SUPPORT_TRANSACTIONS
