Fix build issue

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,6 @@
+; MIT License - Copyright (c) 2020 Francis Van Roie
+; For full license information read the LICENSE file in the project folder
+;
 ; PlatformIO Project Configuration File
 ;
 ; Please visit documentation for the other options and examples
@@ -80,7 +83,7 @@ esp8266_flags=
     -D HTTP_UPLOAD_BUFLEN=640       ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=1024    ; longer PubSubClient messages
 ; -- lvgl build options -----------------------------
-    -D LV_MEM_SIZE=(10*1024U)       ; 10kB lvgl memory
+    -D LV_MEM_SIZE=10240U           ; 10kB lvgl memory
 ; -- hasp-lvgl build options ------------------------
     -D HASP_USE_WIFI=1
     -D HASP_USE_MQTT=1
@@ -99,7 +102,7 @@ esp32_flags=
     -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
 ; -- lvgl build options -----------------------------
-    -D LV_MEM_SIZE=(20*1024U)       ; 20kB lvgl memory
+    -D LV_MEM_SIZE=20480U           ; 20kB lvgl memory
 ; -- hasp-lvgl build options ------------------------
     -D HASP_USE_MQTT=1
     -D HASP_USE_HTTP=1
