--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -1,3 +1,6 @@
+; MIT License - Copyright (c) 2020 Francis Van Roie
+; For full license information read the LICENSE file in the project folder
+;
 ; Copy this file and rename it to platformio_override.ini
 ; ONLY edit platformio_override.ini to make local changes to the parameters
 ;
