--- a/platformio.ini
+++ b/platformio.ini
@@ -32,9 +32,8 @@ upload_speed = 921600
 monitor_speed = 115200
 ; -- Shared library dependencies in all environments
 lib_deps =
-    ;lvgl@7.7.2              ; Not in library yet 
+    lvgl/lvgl @ ^7.7.2       ; Not in library yet 
     bodmer/TFT_eSPI @ ^2.3.4 ; Tft SPI drivers
-    ;TFT_eSPI@^1.4.20        ; Tft SPI drivers
     PubSubClient @ ^2.8.0    ; MQTT client
     ArduinoJson @ ^6.17.2    ; Json(l) parser
     StreamUtils @ ^1.5.0     ; for EEPromStream
