Switch to external libraries

--- a/platformio.ini
+++ b/platformio.ini
@@ -38,8 +38,9 @@ lib_deps =
     ArduinoJson @ ^6.17.2    ; Json(l) parser
     StreamUtils @ ^1.5.0     ; for EEPromStream
     AceButton @ ^1.7.0
+    https://github.com/fvanroie/ConsoleInput.git
     https://github.com/andrethomas/TasmotaSlave.git
-    ; ------ Uned / Test libraries
+    ; ------ Unused / Test libraries
     ;https://github.com/netwizeBE/TFT_eSPI.git
     ;Syslog@^2.0.0       ; Obsoleted
     ;AsyncTCP
@@ -69,7 +70,7 @@ build_flags =
     ${override.build_flags}
     -D HASP_VERSION_MAJOR=0
     -D HASP_VERSION_MINOR=2
-    -D HASP_VERSION_REVISION=1119
+    -D HASP_VERSION_REVISION=1120
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<stm32f4/>
 
