--- a/platformio.ini
+++ b/platformio.ini
@@ -30,14 +30,15 @@ default_envs =
 framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
+
 ; -- Shared library dependencies in all environments
 lib_deps =
-    lvgl/lvgl @ ^7.7.2       ; Not in library yet 
-    bodmer/TFT_eSPI @ ^2.3.4 ; Tft SPI drivers
-    PubSubClient @ ^2.8.0    ; MQTT client
-    ArduinoJson @ ^6.17.2    ; Json(l) parser
-    StreamUtils @ ^1.5.0     ; for EEPromStream
-    AceButton @ ^1.7.0
+    lvgl/lvgl @ ^7.7.2                 ; from PIO library
+    bodmer/TFT_eSPI @ ^2.3.4           ; Tft SPI drivers
+    bxparks/AceButton @ ^1.7.1         ; GPIO button library
+    bblanchon/ArduinoJson @ ^6.17.2    ; Json(l) parser
+    bblanchon/StreamUtils @ ^1.5.0     ; for EEPromStream
+    knolleary/PubSubClient @ ^2.8.0    ; MQTT client
     https://github.com/fvanroie/ConsoleInput.git
     https://github.com/andrethomas/TasmotaSlave.git
     ; ------ Unused / Test libraries
@@ -47,17 +48,17 @@ lib_deps =
     ;https://github.com/me-no-dev/ESPAsyncWebServer/archive/master.zip
     ;https://github.com/me-no-dev/ESPAsyncTCP/archive/master.zip
 
-lib_ignore = 
-    https://github.com/littlevgl/lvgl.git
+; lib_ignore = 
+;     https://github.com/littlevgl/lvgl.git
 
 build_flags =
     ;-Os          ; Code Size Optimization
     -Og           ; Code Debug Optimization
     ;-w           ; Suppress warnings
-    -D CORE_DEBUG_LEVEL=1           ; 0=Silent, 1=Errors
-    -I include   ; include lv_conf.h and hasp_conf.h
+    -D CORE_DEBUG_LEVEL=2           ; 0=Silent, 1=Errors, 2=Warnings
+    -I include    ; include lv_conf.h and hasp_conf.h
     ; -- littlevgl build options ------------------------------
-    -D LV_CONF_INCLUDE_SIMPLE
+    -D LV_CONF_INCLUDE_SIMPLE       ; for lvgl
     -D LV_LVGL_H_INCLUDE_SIMPLE     ; for lv_drivers
     ; -- littlevgl build options ------------------------------
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
