--- a/platformio.ini
+++ b/platformio.ini
@@ -37,7 +37,7 @@ lib_deps =
     bodmer/TFT_eSPI @ ^2.3.4           ; Tft SPI drivers
     bxparks/AceButton @ ^1.7.1         ; GPIO button library
     bblanchon/ArduinoJson @ ^6.17.2    ; Json(l) parser
-    bblanchon/StreamUtils @ ^1.5.0     ; for EEPromStream
+    bblanchon/StreamUtils @ 1.6.0     ; for EEPromStream
     knolleary/PubSubClient @ ^2.8.0    ; MQTT client
     https://github.com/fvanroie/ConsoleInput.git
     https://github.com/andrethomas/TasmotaSlave.git
@@ -71,7 +71,7 @@ build_flags =
     ${override.build_flags}
     -D HASP_VERSION_MAJOR=0
     -D HASP_VERSION_MINOR=2
-    -D HASP_VERSION_REVISION=1120
+    -D HASP_VERSION_REVISION=1121
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<stm32f4/>
 
@@ -83,6 +83,7 @@ esp8266_flags=
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=640       ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=1024    ; longer PubSubClient messages
+    -D ATOMIC_FS_UPDATE             ; enabled compressed ota updates
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=10240U           ; 10kB lvgl memory
 ; -- hasp-lvgl build options ------------------------
