Set partition and decoder

--- a/user_setups/esp32/esp32-dev_ili9488.ini
+++ b/user_setups/esp32/esp32-dev_ili9488.ini
@@ -13,7 +13,9 @@ monitor_port = COM2     ; To change the port, use platform_override.ini
 ; upload_port = 10.4.0.171 ; IP of the ESP
 ; upload_flags =
 ;  --port=3232
-board_build.partitions = user_setups/esp32_partition_app1280k_spiffs1472k.csv
+monitor_filters = esp32_exception_decoder
+board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
+
 debug_tool = esp-prog
 debug_init_break = tbreak setup
 
