--- a/user_setups/esp32/nodemcu-32s_st7796.ini
+++ b/user_setups/esp32/nodemcu-32s_st7796.ini
@@ -10,7 +10,8 @@ platform = espressif32@^2.0.0
 board = nodemcu-32s
 upload_port = COM3      ; To change the port, use platform_override.ini
 monitor_port = COM3     ; To change the port, use platform_override.ini
-board_build.partitions = user_setups/esp32_partition_app1280k_spiffs1472k.csv
+monitor_filters = esp32_exception_decoder
+board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 debug_tool = esp-prog
 debug_init_break = tbreak setup
 
