--- a/user_setups/esp32/d132-unoshield_ili9486_parallel.ini
+++ b/user_setups/esp32/d132-unoshield_ili9486_parallel.ini
@@ -9,7 +9,8 @@ platform = espressif32@^2.0.0
 board = esp32dev
 upload_port = COM4      ; To change the port, use platform_override.ini
 monitor_port = COM4     ; To change the port, use platform_override.ini
-board_build.partitions = user_setups/esp32_partition_app1280k_spiffs1472k.csv
+monitor_filters = esp32_exception_decoder
+board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 
 build_flags =
     ${flags.esp32_flags}
