--- a/user_setups/esp32/esp32-dev_ili9488_parallel.ini
+++ b/user_setups/esp32/esp32-dev_ili9488_parallel.ini
@@ -10,7 +10,9 @@ platform = espressif32@^2.0.0
 board = esp32dev
 upload_port = COM1      ; To change the port, use platform_override.ini
 monitor_port = COM1     ; To change the port, use platform_override.ini
-board_build.partitions = user_setups/esp32_partition_app1280k_spiffs1472k.csv
+monitor_filters = esp32_exception_decoder
+board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
+
 debug_tool = esp-prog
 debug_init_break = tbreak setup
 
