--- a/user_setups/esp32/esp32cam_st7796.ini
+++ b/user_setups/esp32/esp32cam_st7796.ini
@@ -18,7 +18,9 @@ board = esp32cam
 debug_tool = esp-prog
 debug_init_break = tbreak setup
 ;board_build.partitions = min_spiffs.csv
-board_build.partitions = user_setups/esp32_partition_app1280k_spiffs1472k.csv
+monitor_filters = esp32_exception_decoder
+board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
+
 ;ESP32 CAM PINS
 build_flags =
     ${flags.esp32_flags}
