--- a/user_setups/esp32/lolin-d32-pro_ili9341.ini
+++ b/user_setups/esp32/lolin-d32-pro_ili9341.ini
@@ -12,7 +12,9 @@ platform = espressif32@^2.0.0
 board = lolin_d32_pro
 ;upload_port = COM6      ; To change the port, use platform_override.ini
 ;monitor_port = COM6     ; To change the port, use platform_override.ini
-board_build.partitions = user_setups/esp32_partition_app1280k_spiffs1472k.csv
+monitor_filters = esp32_exception_decoder
+board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
+
 build_flags =
     ${flags.esp32_flags}
     -DBOARD_HAS_PSRAM
