--- a/user_setups/esp32/ttgo-esp32-poe_ili9341.ini
+++ b/user_setups/esp32/ttgo-esp32-poe_ili9341.ini
@@ -16,7 +16,9 @@ upload_flags =
 
 ;upload_port = COM9      ; To change the port, use platform_override.ini
 monitor_port = COM9     ; To change the port, use platform_override.ini
-board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv ; default.csv
+monitor_filters = esp32_exception_decoder
+board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
+
 build_flags =
     ${flags.esp32_flags}
 ; -- TFT_eSPI build options ------------------------
