Enable DMA and LittleFS

--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -9,7 +9,9 @@
 [platformio]
 extra_configs =
 ; Uncomment the following line to show all User Setups in the PIO sidebar
-    ;user_setups/*/*.ini
+    ; user_setups/esp32/*.ini
+    ; user_setups/esp8266/*.ini
+    ; user_setups/stm32f4xx/*.ini
 
 [override]
 ; -- Hasp config options --------------------------------------
@@ -18,7 +20,7 @@ build_flags =
 ;    -DUSE_CONFIG_OVERRIDE
 
 extra_default_envs =
-    my_custom_build
+    ;my_custom_build
     ; Comment unneeded environments or create extra
     ;esp32dev-mrb3511
     ;d1mini-lolintft24
@@ -30,15 +32,15 @@ extra_default_envs =
     ;esp32dev-ili9488
 
 ; -- Define COM ports for each environment --------------------
-[env:d1mini32-lolintft24]
+[env:d1-mini-esp32_ili9341.ini]
 upload_port = COM6      ; Change to the correct port
 monitor_port = COM6     ; Change to the correct port
 
-[env:d1mini-lolintft24]
+[env:d1-mini-esp8266_ili9341.ini]
 upload_port = COM4      ; Change to the correct port
 monitor_port = COM4     ; Change to the correct port
 
-[env:esp32dev-mrb3511]
+[env:lolind32pro-lolintft24]
 upload_port = COM3      ; Change to the correct port
 monitor_port = COM3     ; Change to the correct port
 
@@ -48,16 +50,27 @@ upload_port = 192.168.0.4 ; IP of the ESP
 upload_flags =
   --port=3232
 
+[env:ttgo_esp32_poe-lolintft24]
+monitor_port = COM9       ; Change to the correct port
+upload_port = COM9        ; Change to the correct port
+;upload_protocol = espota ; Use ArduinoOTA after flashing over serial
+;upload_port = 10.1.0.130 ; IP of the ESP
+upload_flags =
+  --port=3232
+
 ; -- Custom Environment configuration example -----------------
 [env:my_custom_build]
-platform = espressif32
+platform = espressif32@^2.0.0
 board = nodemcu-32s
+board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 upload_port = COM3
 monitor_port = COM3
+monitor_filters = esp32_exception_decoder
 debug_tool = esp-prog
 debug_init_break = tbreak setup
+
 build_flags =
-    ${flags.esp32_flags}
+    ${esp32.build_flags}
 ; -- TFT_eSPI build options -----------------------------------
     ${lcd.raspberrypi}
     ${pins.vspi32}
@@ -65,3 +78,11 @@ build_flags =
     -D TFT_DC=4
     -D TFT_RST=32
     -D TOUCH_CS=22
+
+lib_deps =
+    ${env.lib_deps}
+    ${esp32.lib_deps}
+
+lib_ignore =
+    ${env.lib_ignore}
+    ${esp32.lib_ignore}
