--- a/platformio.ini
+++ b/platformio.ini
@@ -31,26 +31,6 @@ framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
 
-; -- Shared library dependencies in all environments
-lib_deps =
-    lvgl/lvgl @ ^7.7.2                 ; from PIO library
-    bodmer/TFT_eSPI @ ^2.3.4           ; Tft SPI drivers
-    bxparks/AceButton @ ^1.7.1         ; GPIO button library
-    bblanchon/ArduinoJson @ ^6.17.2    ; Json(l) parser
-    bblanchon/StreamUtils @ 1.6.0     ; for EEPromStream
-    knolleary/PubSubClient @ ^2.8.0    ; MQTT client
-    https://github.com/fvanroie/ConsoleInput.git
-    https://github.com/andrethomas/TasmotaSlave.git
-    ; ------ Unused / Test libraries
-    ;https://github.com/netwizeBE/TFT_eSPI.git
-    ;Syslog@^2.0.0       ; Obsoleted
-    ;AsyncTCP
-    ;https://github.com/me-no-dev/ESPAsyncWebServer/archive/master.zip
-    ;https://github.com/me-no-dev/ESPAsyncTCP/archive/master.zip
-
-; lib_ignore = 
-;     https://github.com/littlevgl/lvgl.git
-
 build_flags =
     ;-Os          ; Code Size Optimization
     -Og           ; Code Debug Optimization
@@ -73,17 +53,71 @@ build_flags =
     -D HASP_VERSION_MINOR=2
     -D HASP_VERSION_REVISION=1124
 
+; -- Shared library dependencies in all environments
+lib_deps =
+    lvgl/lvgl @ ^7.7.2                 ; from PIO library
+    ;bodmer/TFT_eSPI @ ^2.3.4           ; Tft SPI drivers
+    bxparks/AceButton @ ^1.7.1         ; GPIO button library
+    bblanchon/ArduinoJson @ ^6.17.2    ; Json(l) parser
+    bblanchon/StreamUtils @ 1.6.0     ; for EEPromStream
+    knolleary/PubSubClient @ ^2.8.0    ; MQTT client
+    https://github.com/Bodmer/TFT_eSPI.git ; ^2.3.5 needed for DMA
+    https://github.com/fvanroie/ConsoleInput.git
+    https://github.com/andrethomas/TasmotaSlave.git
+    ; ------ Unused / Test libraries
+    ;https://github.com/netwizeBE/TFT_eSPI.git
+    ;Syslog@^2.0.0       ; Obsoleted
+    ;AsyncTCP
+    ;https://github.com/me-no-dev/ESPAsyncWebServer/archive/master.zip
+    ;https://github.com/me-no-dev/ESPAsyncTCP/archive/master.zip
+
+; lib_ignore = 
+;     https://github.com/littlevgl/lvgl.git
+
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<stm32f4/>
 
 extra_scripts = tools/move-rename-firmware.py    ; tools/pre:extra_script.py
 
-; -- Platform specific build flags
-[flags]
-esp8266_flags=
+[esp32]
+build_flags =
     ${env.build_flags}
+	-D PIOENV=${PIOENV} 
+    -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
+    -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
+    -D NO_GLOBAL_HTTPUPDATE         ; dont instantiate httpUpdate
+; -- lvgl build options -----------------------------
+    -D LV_MEM_SIZE=20480U           ; 20kB lvgl memory
+; -- tft_espi build options ------------------------
+    ;-D USE_DMA_TO_TFT
+    ;-D ESP32_DMA                       ; Make touch reads wait for DMA
+; -- hasp-lvgl build options ------------------------
+    -D HASP_USE_MQTT=1
+    -D HASP_USE_HTTP=1
+    -D HASP_USE_MDNS=1
+    -D HASP_USE_SYSLOG=1
+    -D HASP_USE_TELNET=1
+    -D HASP_USE_SPIFFS=0
+    -D HASP_USE_LITTLEFS=1
+    -D HASP_USE_EEPROM=1
+    -D HASP_USE_GPIO=1
+; -- LittleFS build options ------------------------
+	-D CONFIG_LITTLEFS_FOR_IDF_3_2
+
+lib_deps =
+    LittleFS_esp32
+
+lib_ignore =
+    GxTFT
+    XPT2046_Touchscreen
+    ESP32 BLE Arduino
+
+; -- Platform specific build flags
+[esp8266]
+build_flags=
     -D HTTP_UPLOAD_BUFLEN=640       ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=1024    ; longer PubSubClient messages
     -D ATOMIC_FS_UPDATE             ; enabled compressed ota updates
+    -D NO_GLOBAL_HTTPUPDATE         ; dont instantiate httpUpdate
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=10240U           ; 10kB lvgl memory
 ; -- hasp-lvgl build options ------------------------
@@ -99,23 +133,14 @@ esp8266_flags=
     -D HASP_USE_GPIO=1
     -D HASP_USE_ETHERNET=0
 
-esp32_flags=
-    ${env.build_flags}
-    -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
-    -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
-; -- lvgl build options -----------------------------
-    -D LV_MEM_SIZE=20480U           ; 20kB lvgl memory
-; -- hasp-lvgl build options ------------------------
-    -D HASP_USE_MQTT=1
-    -D HASP_USE_HTTP=1
-    -D HASP_USE_MDNS=1
-    -D HASP_USE_SYSLOG=1
-    -D HASP_USE_TELNET=1
-    -D HASP_USE_SPIFFS=1
-    -D HASP_USE_LITTLEFS=0
-    -D HASP_USE_EEPROM=1
-    -D HASP_USE_GPIO=1
+lib_deps =
 
+lib_ignore =
+    GxTFT
+    XPT2046_Touchscreen
+
+
+[flags]
 stm32_flags=
     ${env.build_flags}
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
