--- a/user_setups/esp32/d1-mini-esp32_ili9341.ini
+++ b/user_setups/esp32/d1-mini-esp32_ili9341.ini
@@ -5,7 +5,7 @@
 ;               - xpt2606 touch controller          ;
 ;***************************************************;
 
-[env:d1mini32-lolintft24]
+[env:d1-mini-esp32_ili9341.ini]
 platform = espressif32@^2.0.0
 board = wemos_d1_mini32
 ;upload_port = COM5      ; To change the port, use platform_override.ini
@@ -14,8 +14,8 @@ monitor_filters = esp32_exception_decoder
 board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 
 build_flags =
-    ${flags.esp32_flags}
-	-D PIOENV=${PIOENV} 
+    ${env.build_flags}
+    ${esp32.build_flags}
 ; -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ${pins.vspi32}
@@ -24,16 +24,12 @@ build_flags =
     -D TFT_RST=-1  ; RST
     -D TFT_BCKL=-1 ; None, configurable via web UI (e.g. 21)
     -D TOUCH_CS=17 ; (can also be 22 or 16)
-    ;-D USE_DMA_TO_TFT
-    ;-D ESP32_DMA  ; Make touch reads wait for DMA
-; -- LittleFS build options ------------------------
-	-D CONFIG_LITTLEFS_FOR_IDF_3_2
+
 
 lib_deps =
     ${env.lib_deps}
-    LittleFS_esp32
+    ${esp32.lib_deps}
 
 lib_ignore =
-    GxTFT
-    XPT2046_Touchscreen
-    ESP32 BLE Arduino
+    ${env.lib_ignore}
+    ${esp32.lib_ignore}
