--- a/user_setups/esp32/d132-unoshield_ili9486_parallel.ini
+++ b/user_setups/esp32/d132-unoshield_ili9486_parallel.ini
@@ -13,7 +13,8 @@ monitor_filters = esp32_exception_decoder
 board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 
 build_flags =
-    ${flags.esp32_flags}
+    ${env.build_flags}
+    ${esp32.build_flags}
 ; -- TFT_eSPI build options ------------------------
     -D USER_SETUP_LOADED=1
     ;-D ST7796_DRIVER=1 ;3.95inch Arduino Display-UNO
@@ -47,7 +48,8 @@ build_flags =
 ; -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
+    ${esp32.lib_deps}
 
 lib_ignore =
-    GxTFT
-    XPT2046_Touchscreen
+    ${env.lib_ignore}
+    ${esp32.lib_ignore}
