--- a/user_setups/esp32/esp32-dev_ili9488.ini
+++ b/user_setups/esp32/esp32-dev_ili9488.ini
@@ -20,7 +20,8 @@ debug_tool = esp-prog
 debug_init_break = tbreak setup
 
 build_flags =
-    ${flags.esp32_flags}
+    ${env.build_flags}
+    ${esp32.build_flags}
 ; -- TFT_eSPI build options ------------------------
     -D USER_SETUP_LOADED=1
     -D ILI9488_DRIVER=1
@@ -47,7 +48,8 @@ build_flags =
 ; -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
+    ${esp32.lib_deps}
 
 lib_ignore =
-    GxTFT
-    XPT2046_Touchscreen
+    ${env.lib_ignore}
+    ${esp32.lib_ignore}
