--- a/user_setups/esp32/esp32-dev_ili9488_parallel.ini
+++ b/user_setups/esp32/esp32-dev_ili9488_parallel.ini
@@ -17,7 +17,8 @@ debug_tool = esp-prog
 debug_init_break = tbreak setup
 
 build_flags =
-    ${flags.esp32_flags}
+    ${env.build_flags}
+    ${esp32.build_flags}
 ; -- TFT_eSPI build options ------------------------
     ${lcd.mrb3511}
     -D TFT_BCKL=5  ;None, configurable via web UI (e.g. 2 for D4)
@@ -44,8 +45,11 @@ build_flags =
 ; -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
+    ${esp32.lib_deps}
+    adafruit/Adafruit GFX Library @ ^1.10.3
+    adafruit/Adafruit BusIO @ ^1.6.0
     https://github.com/netwizeBE/arduino-goodix.git  ; GT911 touch screen driver
 
 lib_ignore =
-    GxTFT
-    XPT2046_Touchscreen
+    ${env.lib_ignore}
+    ; ${esp32.lib_ignore}
