--- a/user_setups/esp32/esp32cam_st7796.ini
+++ b/user_setups/esp32/esp32cam_st7796.ini
@@ -23,7 +23,8 @@ board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 
 ;ESP32 CAM PINS
 build_flags =
-    ${flags.esp32_flags}
+    ${env.build_flags}
+    ${esp32.build_flags}
 ; -- TFT_eSPI build options ------------------------
     ${lcd.raspberrypi}
     -D USE_HSPI_PORT
@@ -41,7 +42,8 @@ build_flags =
 ; -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
+    ${esp32.lib_deps}
 
 lib_ignore =
-    GxTFT
-    XPT2046_Touchscreen
+    ${env.lib_ignore}
+    ${esp32.lib_ignore}
