--- a/user_setups/esp32/lolin-d32-pro_ili9341.ini
+++ b/user_setups/esp32/lolin-d32-pro_ili9341.ini
@@ -16,7 +16,8 @@ monitor_filters = esp32_exception_decoder
 board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 
 build_flags =
-    ${flags.esp32_flags}
+    ${env.build_flags}
+    ${esp32.build_flags}
     -DBOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
 ; -- TFT_eSPI build options ------------------------
@@ -28,7 +29,10 @@ build_flags =
     -D TFT_BCKL=-1  ; None, configurable via web UI (e.g. 21)
     -D TOUCH_CS=17  ; (can also be 22 or 16)
 
-lib_ignore =
-    GxTFT
-    XPT2046_Touchscreen
+lib_deps =
+    ${env.lib_deps}
+    ${esp32.lib_deps}
 
+lib_ignore =
+    ${env.lib_ignore}
+    ${esp32.lib_ignore}
