--- a/user_setups/esp32/nodemcu-32s_st7796.ini
+++ b/user_setups/esp32/nodemcu-32s_st7796.ini
@@ -16,7 +16,8 @@ debug_tool = esp-prog
 debug_init_break = tbreak setup
 
 build_flags =
-    ${flags.esp32_flags}
+    ${env.build_flags}
+    ${esp32.build_flags}
 ; -- TFT_eSPI build options ------------------------
     ${lcd.raspberrypi}
     ${pins.vspi32}
@@ -31,7 +32,8 @@ build_flags =
 ; -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
+    ${esp32.lib_deps}
 
 lib_ignore =
-    GxTFT
-    XPT2046_Touchscreen
+    ${env.lib_ignore}
+    ${esp32.lib_ignore}
