--- a/user_setups/esp32/ttgo-esp32-poe_ili9341.ini
+++ b/user_setups/esp32/ttgo-esp32-poe_ili9341.ini
@@ -20,7 +20,8 @@ monitor_filters = esp32_exception_decoder
 board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 
 build_flags =
-    ${flags.esp32_flags}
+    ${env.build_flags}
+    ${esp32.build_flags}
 ; -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     -D TFT_MISO=2
@@ -35,6 +36,10 @@ build_flags =
     -D HASP_USE_ETHERNET=1
     -D HASP_USE_WIFI=0
 
+lib_deps =
+    ${env.lib_deps}
+    ${esp32.lib_deps}
+
 lib_ignore =
-    GxTFT
-    XPT2046_Touchscreen
+    ${env.lib_ignore}
+    ${esp32.lib_ignore}
