--- a/user_setups/esp8266/d1-mini-esp8266_ili9341.ini
+++ b/user_setups/esp8266/d1-mini-esp8266_ili9341.ini
@@ -5,7 +5,7 @@
 ;               - xpt2606 touch controller          ;
 ;***************************************************;
 
-[env:d1mini-lolintft24]
+[env:d1-mini-esp8266_ili9341.ini]
 platform = espressif8266@^2.6.2
 board = d1_mini
 ;upload_port = COM7      ; To change the port, use platform_override.ini
@@ -16,7 +16,8 @@ board_build.flash_mode = dout
 board_build.ldscript = eagle.flash.4m2m.ld  ; 2Mb Spiffs
 board_build.f_cpu = 160000000L ; set frequency to 160MHz
 build_flags =
-    ${flags.esp8266_flags}
+    ${env.build_flags}
+    ${esp8266.build_flags}
 ; -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ;-D TFT_MISO=12 ;D6  Use default HSPI
@@ -28,6 +29,12 @@ build_flags =
     -D TOUCH_CS=0   ;D3  (can also be D1 or D2)
     -D TFT_RST=-1   ;RST
 
+; -- Library options -------------------------------
+lib_deps =
+    ${env.lib_deps}
+    ${esp8266.lib_deps}
+    ;Ethernet@<2.0.0
+
 lib_ignore =
-    GxTFT
-    XPT2046_Touchscreen
+    ${env.lib_ignore}
+    ${esp8266.lib_ignore}
