--- a/user_setups/esp8266/esp8266_st7735.ini
+++ b/user_setups/esp8266/esp8266_st7735.ini
@@ -14,7 +14,8 @@ board_build.flash_mode = dout
 board_build.ldscript = eagle.flash.4m2m.ld  ; 2Mb Spiffs
 board_build.f_cpu = 160000000L ; set frequency to 160MHz
 build_flags =
-    ${flags.esp8266_flags}
+    ${env.build_flags}
+    ${esp8266.build_flags}
 ; -- TFT_eSPI build options ------------------------
     -D USER_SETUP_LOADED=1
     -D ST7735_DRIVER=1
@@ -35,8 +36,9 @@ build_flags =
 ; -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
+    ${esp8266.lib_deps}
     ;Ethernet@<2.0.0
 
 lib_ignore =
-    GxTFT
-    XPT2046_Touchscreen
+    ${env.lib_ignore}
+    ${esp8266.lib_ignore}
