--- a/user_setups/esp32/d1-mini-esp32_ili9341.ini
+++ b/user_setups/esp32/d1-mini-esp32_ili9341.ini
@@ -2,10 +2,10 @@
 ;          D1 Mini ESP32 with Lolin TFT 2.4"        ;
 ;               - D1-mini-esp32 board               ;
 ;               - ili9341 TFT                       ;
-;               - xpt2606 touch controller          ;
+;               - xpt2046 touch controller          ;
 ;***************************************************;
 
-[env:d1-mini-esp32_ili9341.ini]
+[env:d1-mini-esp32_ili9341]
 platform = espressif32@^2.0.0
 board = wemos_d1_mini32
 ;upload_port = COM5      ; To change the port, use platform_override.ini
