--- a/user_setups/esp8266/d1-mini-esp8266_ili9341.ini
+++ b/user_setups/esp8266/d1-mini-esp8266_ili9341.ini
@@ -2,10 +2,10 @@
 ;          D1 Mini ESP8266 with Lolin TFT 2.4"      ;
 ;               - D1-mini board                     ;
 ;               - ili9341 TFT                       ;
-;               - xpt2606 touch controller          ;
+;               - xpt2046 touch controller          ;
 ;***************************************************;
 
-[env:d1-mini-esp8266_ili9341.ini]
+[env:d1-mini-esp8266_ili9341]
 platform = espressif8266@^2.6.2
 board = d1_mini
 ;upload_port = COM7      ; To change the port, use platform_override.ini
