--- a/platformio.ini
+++ b/platformio.ini
@@ -51,7 +51,7 @@ build_flags =
     ${override.build_flags}
     -D HASP_VERSION_MAJOR=0
     -D HASP_VERSION_MINOR=2
-    -D HASP_VERSION_REVISION=1124
+    -D HASP_VERSION_REVISION=1125
 
 ; -- Shared library dependencies in all environments
 lib_deps =
@@ -86,7 +86,8 @@ build_flags =
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
     -D NO_GLOBAL_HTTPUPDATE         ; dont instantiate httpUpdate
 ; -- lvgl build options -----------------------------
-    -D LV_MEM_SIZE=20480U           ; 20kB lvgl memory
+    -D LV_MEM_SIZE=61440U           ; 60kB lvgl memory
+    ;-D LV_MEM_SIZE=10240U           ; 10kB lvgl memory
 ; -- tft_espi build options ------------------------
     ;-D USE_DMA_TO_TFT
     ;-D ESP32_DMA                       ; Make touch reads wait for DMA
@@ -96,8 +97,8 @@ build_flags =
     -D HASP_USE_MDNS=1
     -D HASP_USE_SYSLOG=1
     -D HASP_USE_TELNET=1
-    -D HASP_USE_SPIFFS=0
-    -D HASP_USE_LITTLEFS=1
+    -D HASP_USE_SPIFFS=1
+    -D HASP_USE_LITTLEFS=0
     -D HASP_USE_EEPROM=1
     -D HASP_USE_GPIO=1
 ; -- LittleFS build options ------------------------
