Add regions to ini files

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,13 @@ default_envs =
     ; You can also create new environments in in platformio_override.ini
     ${override.extra_default_envs}
 
+[override]
+; -- By default there are no ${override.build_flags} set
+; -- to use it, copy the platformio_override.ini file from the template
+build_flags =
+extra_default_envs =
+
+
 ;***************************************************
 ;          Common environment settings
 ;***************************************************
@@ -51,7 +58,7 @@ build_flags =
     ${override.build_flags}
     -D HASP_VERSION_MAJOR=0
     -D HASP_VERSION_MINOR=2
-    -D HASP_VERSION_REVISION=1126
+    -D HASP_VERSION_REVISION=1129
 
 ; -- Shared library dependencies in all environments
 lib_deps =
@@ -104,13 +111,13 @@ build_flags =
 ; -- LittleFS build options ------------------------
 	-D CONFIG_LITTLEFS_FOR_IDF_3_2
 
-lib_deps =
-    LittleFS_esp32
-
 lib_ignore =
     GxTFT
     XPT2046_Touchscreen
     ESP32 BLE Arduino
+
+lib_deps = LittleFS_esp32
+
 
 ; -- Platform specific build flags
 [esp8266]
@@ -134,11 +141,11 @@ build_flags=
     -D HASP_USE_GPIO=1
     -D HASP_USE_ETHERNET=0
 
-lib_deps =
-
 lib_ignore =
     GxTFT
     XPT2046_Touchscreen
+
+lib_deps =
 
 
 [flags]
@@ -149,12 +156,6 @@ stm32_flags=
     -D ICACHE_RAM_ATTR=
     -D STM32
     -D STREAMUTILS_USE_EEPROM_UPDATE=1  ; update cell only when changed
-
-; -- By default there are no ${override.build_flags} set
-; -- to use it, copy the platformio_override.ini file from the template
-[override]
-build_flags =
-extra_default_envs =
 
 ;***************************************************
 ;          Hardware options
