--- a/user_setups/esp32/lolin-d32-pro_ili9341.ini
+++ b/user_setups/esp32/lolin-d32-pro_ili9341.ini
@@ -20,7 +20,8 @@ build_flags =
     ${esp32.build_flags}
     -DBOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
-; -- TFT_eSPI build options ------------------------
+
+;region -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ${pins.vspi32}
     ;-D TFT_DC=5    ; Defined by board, don't redefine !!
@@ -28,7 +29,9 @@ build_flags =
     ;-D TFT_RST=-1  ; Defined by board, don't redefine !!
     -D TFT_BCKL=-1  ; None, configurable via web UI (e.g. 21)
     -D TOUCH_CS=17  ; (can also be 22 or 16)
+;endregion
 
+;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
@@ -36,3 +39,4 @@ lib_deps =
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
+;endregion
