--- a/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
+++ b/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
@@ -33,7 +33,8 @@ build_flags =
     -I include/stm32f4
     -I include/GxTFT/src
     -I include/GxTFT/src/GxCTRL/GxCTRL_ILI9341
-; -- TFT_eSPI build options ------------------------
+
+;region -- TFT_eSPI build options ------------------------
     -D ILI9341_DRIVER=1
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=320
@@ -44,6 +45,9 @@ build_flags =
     ;-D STM32
     ;-D TFT_SPI3
     ;-D USE_DMA_TO_TFT
+;endregion
+
+;region -- Hasp build options ----------------------------
     -D HASP_USE_TASMOTA_SLAVE=0
     -D HASP_OUTPUT_PIN=PA1          ; User LED D2 on DevEBox board 
     -D HASP_INPUT_PIN=PA0           ; User Button K1 on DevEBox board
@@ -58,11 +62,16 @@ build_flags =
     -D HASP_USE_EEPROM=1
     -D HASP_USE_GPIO=0
     -D HASP_USE_ETHERNET=0
+;endregion
+
+;region -- Network build options -------------------------
     -D USE_BUILTIN_ETHERNET=0
     -D HAL_ETH_MODULE_ENABLED=0
     ; -D LAN8742A_PHY_ADDRESS=0x01U ; moved to include\stm32f4\hal_conf_custom.h
     ; -D DP83848_PHY_ADDRESS=0x01U
+;endregion
 
+;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     Ticker@^3.1.5
@@ -79,3 +88,4 @@ lib_ignore =
     lv_lib_zifont
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/>
+;endregion
