--- a/user_setups/esp32/d1-mini-esp32_ili9341.ini
+++ b/user_setups/esp32/d1-mini-esp32_ili9341.ini
@@ -16,7 +16,8 @@ board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
-; -- TFT_eSPI build options ------------------------
+
+;region -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ${pins.vspi32}
     -D TFT_DC=5
@@ -24,8 +25,9 @@ build_flags =
     -D TFT_RST=-1  ; RST
     -D TFT_BCKL=-1 ; None, configurable via web UI (e.g. 21)
     -D TOUCH_CS=17 ; (can also be 22 or 16)
+;endregion
 
-
+;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
@@ -33,3 +35,5 @@ lib_deps =
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
+;endregion
+    
