--- a/user_setups/esp32/d132-unoshield_ili9486_parallel.ini
+++ b/user_setups/esp32/d132-unoshield_ili9486_parallel.ini
@@ -15,7 +15,8 @@ board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
-; -- TFT_eSPI build options ------------------------
+
+;region -- TFT_eSPI build options ------------------------
     -D USER_SETUP_LOADED=1
     ;-D ST7796_DRIVER=1 ;3.95inch Arduino Display-UNO
      -D ILI9486_DRIVER=1 ;3.5inch Arduino Display-UNO
@@ -42,10 +43,12 @@ build_flags =
     -D SPI_FREQUENCY=40000000
     ;-D SPI_TOUCH_FREQUENCY=2500000 ; Uses ADC instead
     -D SPI_READ_FREQUENCY=20000000
+;endregion
+
 ; -- Debugging options -----------------------------
 ;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 
-; -- Library options -------------------------------
+;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
@@ -53,3 +56,4 @@ lib_deps =
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
+;endregion
