--- a/user_setups/esp32/esp32-dev_ili9488.ini
+++ b/user_setups/esp32/esp32-dev_ili9488.ini
@@ -22,7 +22,8 @@ debug_init_break = tbreak setup
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
-; -- TFT_eSPI build options ------------------------
+
+;region -- TFT_eSPI build options ------------------------
     -D USER_SETUP_LOADED=1
     -D ILI9488_DRIVER=1
     -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
@@ -41,11 +42,12 @@ build_flags =
     -D SPI_FREQUENCY=27000000
     -D SPI_TOUCH_FREQUENCY=2500000
     -D SPI_READ_FREQUENCY=16000000
+;endregion
 
 ; -- Debugging options -----------------------------
 ;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 
-; -- Library options -------------------------------
+;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
@@ -53,3 +55,4 @@ lib_deps =
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
+;endregion
