--- a/user_setups/esp32/esp32-dev_ili9488_parallel.ini
+++ b/user_setups/esp32/esp32-dev_ili9488_parallel.ini
@@ -19,7 +19,8 @@ debug_init_break = tbreak setup
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
-; -- TFT_eSPI build options ------------------------
+
+;region -- TFT_eSPI build options ------------------------
     ${lcd.mrb3511}
     -D TFT_BCKL=5  ;None, configurable via web UI (e.g. 2 for D4)
     -D TFT_CS=33  ; Chip select control pin
@@ -39,10 +40,12 @@ build_flags =
     -D TOUCH_SCL=22
     -D TOUCH_IRQ=34   ; use 34-39 as these are input only pins
     -D TOUCH_RST=-1   ; not used, connected to 3.3V
+;endregion
+
 ; -- Debugging options -----------------------------
 ;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 
-; -- Library options -------------------------------
+;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
@@ -53,3 +56,4 @@ lib_deps =
 lib_ignore =
     ${env.lib_ignore}
     ; ${esp32.lib_ignore}
+;endregion
