--- a/user_setups/esp32/esp32cam_st7796.ini
+++ b/user_setups/esp32/esp32cam_st7796.ini
@@ -25,21 +25,24 @@ board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
-; -- TFT_eSPI build options ------------------------
+    -DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
+
+;region -- TFT_eSPI build options ------------------------
     ${lcd.raspberrypi}
     -D USE_HSPI_PORT
     ${pins.hspi32}
-    -DBOARD_HAS_PSRAM
     -D TFT_CS=15
     -D TFT_DC=2
     -D TFT_RST=-1    ; 3.3v
     -D TOUCH_CS=0   ; 3   ; RX
     -D TFT_BCKL=-1
+;endregion
 
 ; -- Debugging options -----------------------------
 ;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 
-; -- Library options -------------------------------
+;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
@@ -47,3 +50,4 @@ lib_deps =
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
+;endregion
