--- a/user_setups/esp32/nodemcu-32s_st7796.ini
+++ b/user_setups/esp32/nodemcu-32s_st7796.ini
@@ -18,18 +18,20 @@ debug_init_break = tbreak setup
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
-; -- TFT_eSPI build options ------------------------
+
+;region -- TFT_eSPI build options ------------------------
     ${lcd.raspberrypi}
     ${pins.vspi32}
     -D TFT_CS=15
     -D TFT_DC=4
     -D TFT_RST=32
     -D TOUCH_CS=22
+;endregion
 
 ; -- Debugging options -----------------------------
 ;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 
-; -- Library options -------------------------------
+;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
@@ -37,3 +39,4 @@ lib_deps =
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
+;endregion
