--- a/user_setups/esp32/ttgo-esp32-poe_ili9341.ini
+++ b/user_setups/esp32/ttgo-esp32-poe_ili9341.ini
@@ -22,7 +22,8 @@ board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
-; -- TFT_eSPI build options ------------------------
+
+;region -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     -D TFT_MISO=2
     -D TFT_MOSI=15
@@ -32,10 +33,14 @@ build_flags =
     -D TFT_RST=12  ; RST
     -D TFT_BCKL=16 ; None, configurable via web UI (e.g. 21)
     -D TOUCH_CS=32 ; (can also be 22 or 16)
-; -- Options ----------------------------------------
+;endregion
+
+;region -- Hasp build options ----------------------------
     -D HASP_USE_ETHERNET=1
     -D HASP_USE_WIFI=0
+;endregion
 
+;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
@@ -43,3 +48,4 @@ lib_deps =
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
+;endregion
