--- a/user_setups/esp8266/d1-mini-esp8266_ili9341.ini
+++ b/user_setups/esp8266/d1-mini-esp8266_ili9341.ini
@@ -18,7 +18,8 @@ board_build.f_cpu = 160000000L ; set frequency to 160MHz
 build_flags =
     ${env.build_flags}
     ${esp8266.build_flags}
-; -- TFT_eSPI build options ------------------------
+
+;region -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ;-D TFT_MISO=12 ;D6  Use default HSPI
     ;-D TFT_MOSI=13 ;D7  Use default HSPI
@@ -28,8 +29,9 @@ build_flags =
     -D TFT_BCKL=-1  ;None, configurable via web UI (e.g. 2 for D4)
     -D TOUCH_CS=0   ;D3  (can also be D1 or D2)
     -D TFT_RST=-1   ;RST
+;endregion
 
-; -- Library options -------------------------------
+;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     ${esp8266.lib_deps}
@@ -38,3 +40,4 @@ lib_deps =
 lib_ignore =
     ${env.lib_ignore}
     ${esp8266.lib_ignore}
+;endregion
