--- a/user_setups/esp8266/esp8266_st7735.ini
+++ b/user_setups/esp8266/esp8266_st7735.ini
@@ -16,7 +16,8 @@ board_build.f_cpu = 160000000L ; set frequency to 160MHz
 build_flags =
     ${env.build_flags}
     ${esp8266.build_flags}
-; -- TFT_eSPI build options ------------------------
+
+;region -- TFT_eSPI build options ------------------------
     -D USER_SETUP_LOADED=1
     -D ST7735_DRIVER=1
     -D ST7735_BLACKTAB=1
@@ -32,8 +33,9 @@ build_flags =
     -D TOUCH_CS=-1 ;NC
     -D TFT_RST=2   ;D4
     -D SPI_FREQUENCY=27000000
+;endregion
 
-; -- Library options -------------------------------
+;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     ${esp8266.lib_deps}
@@ -42,3 +44,4 @@ lib_deps =
 lib_ignore =
     ${env.lib_ignore}
     ${esp8266.lib_ignore}
+;endregion
