--- a/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
@@ -14,7 +14,8 @@ monitor_port = COM7     ; To change the port, use platform_override.ini
 build_flags =
     ${flags.stm32_flags}
     -I include/stm32f4
-; -- TFT_eSPI build options ------------------------
+
+;region -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ;-D TFT_MISO=PB4 ;Default
     ;-D TFT_MOSI=PB5 ;Default
@@ -24,19 +25,28 @@ build_flags =
     -D TFT_BCKL=-1 ;None, configurable via web UI (e.g. 2 for D4)
     -D TOUCH_CS=PA6 ;NC
     -D TFT_RST=-1  ;D4
-    -D HASP_OUTPUT_PIN=PE0 ; User LED D2 on DevEBox board
-    -D HASP_INPUT_PIN=PD15 ; User Button K1 on DevEBox board
+;endregion
+
     -D STM32_SERIAL1 ; Set this option to use Serial1 as default sersial port, leave out if using Serial2
     ;-D HAL_ETH_MODULE_ENABLED=1         ; enable ethernet support
     ;-D LAN8742A_PHY_ADDRESS=0x01U       ; set LAN8720 PHY address
+
+;region -- Hasp build options ----------------------------
+    -D HASP_OUTPUT_PIN=PE0 ; User LED D2 on DevEBox board
+    -D HASP_INPUT_PIN=PD15 ; User Button K1 on DevEBox board
     -D HASP_USE_TASMOTA_SLAVE=1
     -D HASP_USE_ETHERNET=1
+;endregion
+
+;region -- Network build options -------------------------
     -D W5500_MOSI=PB15 ;SPI2 MOSI
     -D W5500_MISO=PB14 ;SPI2 MISO
     -D W5500_SCLK=PB13 ;SPI2 SCLK
     -D W5500_CS=PB6 ;SPI2 CS
     -D W5500_RST=PD1 ;SPI2 CS
+;endregion
 
+;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     Ticker@^3.1.5
@@ -53,5 +63,4 @@ lib_ignore =
     lv_lib_zifont
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/>
-
-;***************************************************
+;endregion
