--- a/user_setups/stm32f4xx/stm32f407-black_ili9341_parallel.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341_parallel.ini
@@ -14,7 +14,8 @@ monitor_port = COM7     ; To change the port, use platform_override.ini
 build_flags =
     ${flags.stm32_flags}
     -I include/stm32f4
-; -- TFT_eSPI build options ------------------------
+    
+;region -- TFT_eSPI build options ------------------------
     -D ILI9341_DRIVER=1
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=320
@@ -40,15 +41,20 @@ build_flags =
     ; -D TOUCH_CS=PB12
     ; -D TOUCH_IRQ=PC5   ; use 34-39 as these are input only pins
     ; -D TOUCH_RST=-1   ; not used, connected to 3.3V
+;endregion
+
+;region -- Hasp build options ----------------------------
     -D HASP_OUTPUT_PIN=PA6 ; User LED D2 on MCUDev Black board
     -D HASP_INPUT_PIN=PE4 ; User Button K0 on MCUDev Black board
     -D HASP_USE_HTTP=0
     -D HASP_USE_MQTT=0
-    
-; -- Debugging options -----------------------------
-;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+;endregion
 
-; -- Library options -------------------------------
+;region -- Debugging options -----------------------------
+;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+;endregion
+
+;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     Ticker@^3.1.5
@@ -57,3 +63,4 @@ lib_ignore =
     lv_lib_zifont
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/>
+;endregion
