--- a/user_setups/stm32f4xx/stm32f407-black_ili9341_wifi.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341_wifi.ini
@@ -15,7 +15,8 @@ build_flags =
     ${flags.stm32_flags}
     -I include/stm32f4
     -I include/espspi
-; -- TFT_eSPI build options ------------------------
+
+;region -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ;-D TFT_MISO=PB4 ;Default
     ;-D TFT_MOSI=PB5 ;Default
@@ -27,11 +28,15 @@ build_flags =
     -D TFT_BCKL=PA15 ;None, configurable via web UI (e.g. 2 for D4)
     -D TOUCH_CS=PA6 ;NC
     -D TFT_RST=PD13  ;D4
-    -D HASP_OUTPUT_PIN=PE0 ; User LED D2 on DevEBox board
-    -D HASP_INPUT_PIN=PD15 ; User Button K1 on DevEBox board
+;endregion
+
     -D STM32_SERIAL1 ; Set this option to use Serial1 as default sersial port, leave out if using Serial2
     ;-D HAL_ETH_MODULE_ENABLED=1         ; enable ethernet support
     ;-D LAN8742A_PHY_ADDRESS=0x01U       ; set LAN8720 PHY address
+
+;region -- Hasp build options ----------------------------
+    -D HASP_OUTPUT_PIN=PE0 ; User LED D2 on DevEBox board
+    -D HASP_INPUT_PIN=PD15 ; User Button K1 on DevEBox board
     -D HASP_USE_WIFI=1
     -D HASP_USE_MQTT=1
     -D HASP_USE_HTTP=1
@@ -43,12 +48,17 @@ build_flags =
     -D HASP_USE_GPIO=0
     -D HASP_USE_TASMOTA_SLAVE=0
     -D HASP_USE_ETHERNET=0
+;endregion
+
+;region -- Network build options -------------------------
     -D ESPSPI_MOSI=PB15 ;SPI2 MOSI
     -D ESPSPI_MISO=PB14 ;SPI2 MISO
     -D ESPSPI_SCLK=PB13 ;SPI2 SCLK
     -D ESPSPI_CS=PB6 ;SPI2 CS
     -D ESPSPI_RST=PD1 ;SPI2 CS
+;endregion
 
+;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     Ticker@^3.1.5
@@ -66,5 +76,4 @@ lib_ignore =
     lv_lib_zifont
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/> +<espspi/>
-
-;***************************************************
+;endregion
