--- a/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
@@ -25,7 +25,8 @@ debug_tool = stlink
 build_flags =
     ${flags.stm32_flags}
     -I include/stm32f4
-; -- TFT_eSPI build options ------------------------
+
+;region -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ;-D TFT_MISO=PB4 ;Default
     ;-D TFT_MOSI=PB5 ;Default
@@ -39,6 +40,9 @@ build_flags =
 ;#define TFT_SPI_PORT 1 // SPI port 1 maximum clock rate is 55MHz
     -D TFT_SPI3
     -D USE_DMA_TO_TFT
+;endregion
+
+;region -- Hasp build options ----------------------------
     -D HASP_USE_WIFI=0
     -D HASP_USE_MQTT=1
     -D HASP_USE_HTTP=1
@@ -51,13 +55,19 @@ build_flags =
     -D HASP_USE_TASMOTA_SLAVE=0
     -D HASP_OUTPUT_PIN=PA1          ; User LED D2 on DevEBox board 
     -D HASP_INPUT_PIN=PA0           ; User Button K1 on DevEBox board
+;endregion
+
     -D STM32_SERIAL1                ; Set this option to use Serial1 as default sersial port, leave out if using Serial2
+
+;region -- Network build options -------------------------
     -D HASP_USE_ETHERNET=1
     -D USE_BUILTIN_ETHERNET=1
     -D HAL_ETH_MODULE_ENABLED=1
     ; -D LAN8742A_PHY_ADDRESS=0x01U ; moved to include\stm32f4\hal_conf_custom.h
     ; -D DP83848_PHY_ADDRESS=0x01U
+;endregion
 
+;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     Ticker@^3.1.5
@@ -73,3 +83,4 @@ lib_ignore =
     lv_lib_zifont
     
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/>
+;endregion
