Add regions to ini files

--- a/platformio.ini
+++ b/platformio.ini
@@ -85,6 +85,7 @@ src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> 
 
 extra_scripts = tools/move-rename-firmware.py    ; tools/pre:extra_script.py
 
+; -- Platform specific build flags
 [esp32]
 build_flags =
     ${env.build_flags}
@@ -118,8 +119,6 @@ lib_ignore =
 
 lib_deps = LittleFS_esp32
 
-
-; -- Platform specific build flags
 [esp8266]
 build_flags=
     -D HTTP_UPLOAD_BUFLEN=640       ; lower http upload buffer
@@ -147,15 +146,16 @@ lib_ignore =
 
 lib_deps =
 
-
-[flags]
-stm32_flags=
-    ${env.build_flags}
+[stm32f4]
+build_flags=
+    -I include/stm32f4
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
     -D IRAM_ATTR=                   ; No IRAM_ATTR available on STM32
     -D ICACHE_RAM_ATTR=
     -D STM32
     -D STREAMUTILS_USE_EEPROM_UPDATE=1  ; update cell only when changed
+; -- lvgl build options -----------------------------
+    -D LV_MEM_SIZE=20480U           ; 20kB lvgl memory
 
 ;***************************************************
 ;          Hardware options
