--- a/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
+++ b/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
@@ -29,8 +29,8 @@ upload_protocol = dfu
 debug_tool = stlink
 ;monitor_port = COM19     ; To change the port, use platform_override.ini
 build_flags =
-    ${flags.stm32_flags}
-    -I include/stm32f4
+    ${env.build_flags}
+    ${stm32f4.build_flags}
     -I include/GxTFT/src
     -I include/GxTFT/src/GxCTRL/GxCTRL_ILI9341
 
@@ -47,11 +47,12 @@ build_flags =
     ;-D USE_DMA_TO_TFT
 ;endregion
 
+    -D STM32_SERIAL1                ; Set this option to use Serial1 as default sersial port, leave out if using Serial2
+
 ;region -- Hasp build options ----------------------------
     -D HASP_USE_TASMOTA_SLAVE=0
     -D HASP_OUTPUT_PIN=PA1          ; User LED D2 on DevEBox board 
     -D HASP_INPUT_PIN=PA0           ; User Button K1 on DevEBox board
-    -D STM32_SERIAL1                ; Set this option to use Serial1 as default sersial port, leave out if using Serial2
     -D HASP_USE_WIFI=0
     -D HASP_USE_MQTT=0
     -D HASP_USE_HTTP=0
