--- a/user_setups/stm32f4xx/stm32f407-black_ili9341_parallel.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341_parallel.ini
@@ -12,8 +12,8 @@ board_build.mcu = stm32f407vet6
 upload_protocol = dfu
 monitor_port = COM7     ; To change the port, use platform_override.ini
 build_flags =
-    ${flags.stm32_flags}
-    -I include/stm32f4
+    ${env.build_flags}
+    ${stm32f4.build_flags}
     
 ;region -- TFT_eSPI build options ------------------------
     -D ILI9341_DRIVER=1
