--- a/user_setups/stm32f4xx/stm32f407-black_ili9341_wifi.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341_wifi.ini
@@ -12,8 +12,8 @@ board_build.mcu = stm32f407vgt6
 upload_protocol = dfu
 monitor_port = COM7     ; To change the port, use platform_override.ini
 build_flags =
-    ${flags.stm32_flags}
-    -I include/stm32f4
+    ${env.build_flags}
+    ${stm32f4.build_flags}
     -I include/espspi
 
 ;region -- TFT_eSPI build options ------------------------
@@ -31,8 +31,6 @@ build_flags =
 ;endregion
 
     -D STM32_SERIAL1 ; Set this option to use Serial1 as default sersial port, leave out if using Serial2
-    ;-D HAL_ETH_MODULE_ENABLED=1         ; enable ethernet support
-    ;-D LAN8742A_PHY_ADDRESS=0x01U       ; set LAN8720 PHY address
 
 ;region -- Hasp build options ----------------------------
     -D HASP_OUTPUT_PIN=PE0 ; User LED D2 on DevEBox board
@@ -56,6 +54,8 @@ build_flags =
     -D ESPSPI_SCLK=PB13 ;SPI2 SCLK
     -D ESPSPI_CS=PB6 ;SPI2 CS
     -D ESPSPI_RST=PD1 ;SPI2 CS
+    ;-D HAL_ETH_MODULE_ENABLED=1         ; enable ethernet support
+    ;-D LAN8742A_PHY_ADDRESS=0x01U       ; set LAN8720 PHY address
 ;endregion
 
 ;region -- Library options -------------------------------
