--- a/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
@@ -23,8 +23,8 @@ upload_protocol = stlink
 debug_tool = stlink
 ;monitor_port = COM19     ; To change the port, use platform_override.ini
 build_flags =
-    ${flags.stm32_flags}
-    -I include/stm32f4
+    ${env.build_flags}
+    ${stm32f4.build_flags}
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
