Update ini files

--- a/platformio.ini
+++ b/platformio.ini
@@ -156,6 +156,9 @@ build_flags=
     -D STREAMUTILS_USE_EEPROM_UPDATE=1  ; update cell only when changed
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=20480U           ; 20kB lvgl memory
+    -D HASP_USE_SYSLOG=0            ; Needs UDP
+    -D HASP_USE_SPIFFS=0
+    -D HASP_USE_LITTLEFS=0
 
 ;***************************************************
 ;          Hardware options
