--- a/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
+++ b/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
@@ -81,7 +81,8 @@ lib_deps =
     https://github.com/stm32duino/LwIP.git
     https://github.com/stm32duino/STM32Ethernet.git
     https://github.com/khoih-prog/EthernetWebServer_STM32
-    Adafruit GFX Library@^1.7.5
+    adafruit/Adafruit GFX Library @ ^1.10.3
+    ;adafruit/Adafruit BusIO @ ^1.6.0
     ;https://github.com/ZinggJM/GxTFT.git
     XPT2046_Touchscreen
 
