--- a/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
@@ -49,7 +49,7 @@ build_flags =
 ;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
-    Ticker@^3.1.5
+    sstaub/Ticker @ ^3.2.0
     ;Ethernet
     ; STM32duino LwIP@^2.1.2
     ; STM32duino STM32Ethernet@^1.0.5
