--- a/user_setups/stm32f4xx/stm32f407-black_ili9341_parallel.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341_parallel.ini
@@ -47,7 +47,7 @@ build_flags =
     -D HASP_OUTPUT_PIN=PA6 ; User LED D2 on MCUDev Black board
     -D HASP_INPUT_PIN=PE4 ; User Button K0 on MCUDev Black board
     -D HASP_USE_HTTP=0
-    -D HASP_USE_MQTT=0
+    -D HASP_USE_MQTT=1
 ;endregion
 
 ;region -- Debugging options -----------------------------
@@ -57,7 +57,11 @@ build_flags =
 ;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
-    Ticker@^3.1.5
+    sstaub/Ticker @ ^3.2.0
+    adafruit/Adafruit GFX Library @ ^1.10.3
+    adafruit/Adafruit BusIO @ ^1.6.0
+    stm32duino/STM32duino LwIP @ ^2.1.2
+    stm32duino/STM32Ethernet @ ^1.2.0
 
 lib_ignore =
     lv_lib_zifont
