--- a/user_setups/stm32f4xx/stm32f407-black_ili9341_wifi.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341_wifi.ini
@@ -61,10 +61,10 @@ build_flags =
 ;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
-    Ticker@^3.1.5
+    sstaub/Ticker @ ^3.2.0
     ;Ethernet
-    ; STM32duino LwIP@^2.1.2
-    ; STM32duino STM32Ethernet@^1.0.5
+    ;stm32duino/STM32duino LwIP @ ^2.1.2
+    ;stm32duino/STM32Ethernet @ ^1.2.0
     ; https://github.com/stm32duino/LwIP.git
     ; https://github.com/netwizeBE/Ethernet3.git
     https://github.com/khoih-prog/EthernetWebServer_STM32
