--- a/platformio.ini
+++ b/platformio.ini
@@ -47,6 +47,7 @@ build_flags =
     ; -- littlevgl build options ------------------------------
     -D LV_CONF_INCLUDE_SIMPLE       ; for lvgl
     -D LV_LVGL_H_INCLUDE_SIMPLE     ; for lv_drivers
+    -D LV_COMP_CONF_INCLUDE_SIMPLE  ; for components
     ; -- littlevgl build options ------------------------------
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     ; -- ArduinoJson build options ----------------------------
@@ -62,6 +63,9 @@ build_flags =
 
 ; -- Shared library dependencies in all environments
 lib_deps =
+    ;https://github.com/fvanroie/lvgl.git#dev      ; lvgl 8.0.0 dev
+    ;https://github.com/fvanroie/lv_components ;lvgl widgets 8.0.0
+
     lvgl/lvgl @ ^7.7.2                 ; from PIO library
     ;bodmer/TFT_eSPI @ ^2.3.4           ; Tft SPI drivers
     bxparks/AceButton @ ^1.7.1         ; GPIO button library
