--- a/platformio.ini
+++ b/platformio.ini
@@ -63,16 +63,16 @@ build_flags =
 
 ; -- Shared library dependencies in all environments
 lib_deps =
-    ;https://github.com/fvanroie/lvgl.git#dev      ; lvgl 8.0.0 dev
-    ;https://github.com/fvanroie/lv_components ;lvgl widgets 8.0.0
+    https://github.com/fvanroie/lvgl.git#dev      ; lvgl 8.0.0 dev
+    https://github.com/fvanroie/lv_components ;lvgl widgets 8.0.0
 
-    lvgl/lvgl @ ^7.7.2                 ; from PIO library
-    ;bodmer/TFT_eSPI @ ^2.3.4           ; Tft SPI drivers
+    ;lvgl/lvgl @ ^7.7.2                 ; from PIO library
+    bodmer/TFT_eSPI @ ^2.3.4           ; Tft SPI drivers
     bxparks/AceButton @ ^1.7.1         ; GPIO button library
     bblanchon/ArduinoJson @ ^6.17.2    ; Json(l) parser
     bblanchon/StreamUtils @ 1.6.0     ; for EEPromStream
     knolleary/PubSubClient @ ^2.8.0    ; MQTT client
-    https://github.com/Bodmer/TFT_eSPI.git ; ^2.3.5 needed for DMA
+    ;https://github.com/Bodmer/TFT_eSPI.git ; ^2.3.5 needed for DMA
     https://github.com/fvanroie/ConsoleInput.git
     https://github.com/andrethomas/TasmotaSlave.git
     ; ------ Unused / Test libraries
