--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,5 +27,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install --upgrade platformio
+    - name: Setup Environments
+      run: |
+        sed -i 's/; user_setups/user_setups/g' platformio_override-template.ini > platformio_override.ini
     - name: Run PlatformIO
       run: pio run
