--- a/user_setups/esp32/d1-mini-esp32_ili9341.ini
+++ b/user_setups/esp32/d1-mini-esp32_ili9341.ini
@@ -6,7 +6,7 @@
 ;***************************************************;
 
 [env:d1-mini-esp32_ili9341]
-platform = espressif32 @ ^2.0.0
+platform = espressif32
 board = wemos_d1_mini32
 ;upload_port = COM5      ; To change the port, use platform_override.ini
 ;monitor_port = COM5     ; To change the port, use platform_override.ini
