--- a/user_setups/esp32/d132-unoshield_ili9486_parallel.ini
+++ b/user_setups/esp32/d132-unoshield_ili9486_parallel.ini
@@ -5,7 +5,7 @@
 ;***************************************************;
 
 [env:d132-unoshield]
-platform = espressif32 @ ^2.0.0
+platform = espressif32
 board = esp32dev
 upload_port = COM4      ; To change the port, use platform_override.ini
 monitor_port = COM4     ; To change the port, use platform_override.ini
