--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,7 +29,7 @@ jobs:
         pip install --upgrade platformio
     - name: Setup Environments
       run: |
-        sed 's/; user_setups\/esp82/; user_setups\/esp82/g' platformio_override-template.ini > platformio_override.ini
+        sed 's/; user_setups\/esp/user_setups\/esp/g' platformio_override-template.ini > platformio_override.ini
     - name: Dir
       run: |
         ls -la
@@ -37,4 +37,4 @@ jobs:
       run: |
         cat platformio_override.ini
     - name: Run PlatformIO
-      run: pio run
+      run: pio run -e d1-mini-esp32_ili9341 -e d1-mini-esp8266_ili9341
