--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -32,11 +32,11 @@ extra_default_envs =
     ;esp32dev-ili9488
 
 ; -- Define COM ports for each environment --------------------
-[env:d1-mini-esp32_ili9341.ini]
+[env:d1-mini-esp32_ili9341]
 upload_port = COM6      ; Change to the correct port
 monitor_port = COM6     ; Change to the correct port
 
-[env:d1-mini-esp8266_ili9341.ini]
+[env:d1-mini-esp8266_ili9341]
 upload_port = COM4      ; Change to the correct port
 monitor_port = COM4     ; Change to the correct port
 
