--- a/platformio.ini
+++ b/platformio.ini
@@ -67,7 +67,7 @@ lib_deps =
     https://github.com/fvanroie/lv_components ;lvgl widgets 8.0.0
 
     ;lvgl/lvgl @ ^7.7.2                 ; from PIO library
-    bodmer/TFT_eSPI @ ^2.3.4           ; Tft SPI drivers
+    bodmer/TFT_eSPI @ 2.3.4           ; Tft SPI drivers EXACT version 2.3.5 has compile error
     bxparks/AceButton @ ^1.7.1         ; GPIO button library
     bblanchon/ArduinoJson @ ^6.17.2    ; Json(l) parser
     bblanchon/StreamUtils @ 1.6.0     ; for EEPromStream
