--- a/platformio.ini
+++ b/platformio.ini
@@ -58,23 +58,23 @@ build_flags =
     ;-D DISABLE_LOGGING
     ${override.build_flags}
     -D HASP_VERSION_MAJOR=0
-    -D HASP_VERSION_MINOR=2
-    -D HASP_VERSION_REVISION=1129
+    -D HASP_VERSION_MINOR=3
+    -D HASP_VERSION_REVISION=1207
 
 ; -- Shared library dependencies in all environments
+; Warning : don't put comments after github links => causes infinite download loop
 lib_deps =
-    https://github.com/fvanroie/lvgl.git#dev      ; lvgl 8.0.0 dev
-    https://github.com/fvanroie/lv_components ;lvgl widgets 8.0.0
-
-    ;lvgl/lvgl @ ^7.7.2                 ; from PIO library
-    bodmer/TFT_eSPI @ 2.3.4           ; Tft SPI drivers EXACT version 2.3.5 has compile error
     bxparks/AceButton @ ^1.7.1         ; GPIO button library
     bblanchon/ArduinoJson @ ^6.17.2    ; Json(l) parser
     bblanchon/StreamUtils @ 1.6.0     ; for EEPromStream
     knolleary/PubSubClient @ ^2.8.0    ; MQTT client
-    ;https://github.com/Bodmer/TFT_eSPI.git ; ^2.3.5 needed for DMA
-    https://github.com/fvanroie/ConsoleInput.git
-    https://github.com/andrethomas/TasmotaSlave.git
+    git+https://github.com/Bodmer/TFT_eSPI.git   ;  ztest
+    git+https://github.com/fvanroie/ConsoleInput.git
+    git+https://github.com/andrethomas/TasmotaSlave.git
+    git+https://github.com/fvanroie/lv_components.git
+    git+https://github.com/lvgl/lvgl.git#dev
+    ;lvgl/lvgl @ ^7.7.2                 ; from PIO library
+    ;bodmer/TFT_eSPI @ 2.3.4           ; Tft SPI drivers EXACT version 2.3.5 has compile error
     ; ------ Unused / Test libraries
     ;https://github.com/netwizeBE/TFT_eSPI.git
     ;Syslog@^2.0.0       ; Obsoleted
@@ -130,7 +130,7 @@ build_flags=
     -D ATOMIC_FS_UPDATE             ; enabled compressed ota updates
     -D NO_GLOBAL_HTTPUPDATE         ; dont instantiate httpUpdate
 ; -- lvgl build options -----------------------------
-    -D LV_MEM_SIZE=10240U           ; 10kB lvgl memory
+    -D LV_MEM_SIZE=16384U           ; 16kB lvgl memory
 ; -- hasp-lvgl build options ------------------------
     -D HASP_USE_WIFI=1
     -D HASP_USE_MQTT=1
